<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".arch.ui.classdetail.school.schoolannouncement.schoolannouncementdetail.SchoolAnnouncementDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:elevation="@dimen/size_10"
        app:elevation="@dimen/size_10">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:minHeight="?attr/actionBarSize">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"
        android:layout_above="@+id/etSchoolAnnouncementDetailComment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvSchoolAnnouncementDetailAnnouncement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_12"
                android:layout_marginHorizontal="@dimen/size_8"
                android:elevation="@dimen/size_2"
                app:cardCornerRadius="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/size_18">

                    <TextView
                        android:id="@+id/tvSchoolAnnouncementDetailTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/size_10"
                        android:layout_marginTop="@dimen/size_16"
                        android:lineHeight="@dimen/text_24"
                        android:text="@string/announcement_title"
                        android:textColor="@color/colorSuperDarkBlue"
                        android:textSize="@dimen/text_16"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ivAnnouncementDetailMoreButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_20"
                        android:layout_marginRight="@dimen/size_10"
                        android:clickable="true"
                        android:src="@drawable/ic_more_vertical"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvSchoolAnnouncementDetailContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_8"
                        android:lineHeight="@dimen/text_20"
                        android:paddingHorizontal="@dimen/size_10"
                        android:text="@string/announcement_content_complete"
                        android:textColor="#222222"
                        android:textSize="@dimen/text_14"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvSchoolAnnouncementDetailTitle" />

                    <TextView
                        android:id="@+id/tvSchoolAnnouncementDetailTeacher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_24"
                        android:lineHeight="@dimen/text_20"
                        android:paddingHorizontal="@dimen/size_10"
                        android:text="Eni Trikuswanti"
                        android:textColor="#7A7A7A"
                        android:textSize="@dimen/text_12"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvSchoolAnnouncementDetailContent" />

                    <TextView
                        android:id="@+id/tvSchoolAnnouncementDetailDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineHeight="@dimen/text_20"
                        android:paddingHorizontal="@dimen/size_10"
                        android:paddingRight="@dimen/size_10"
                        android:text="12.00 · Senin, 12 Maret 2020"
                        android:textColor="#7A7A7A"
                        android:textSize="@dimen/text_12"
                        app:layout_constraintBottom_toBottomOf="@+id/tvSchoolAnnouncementDetailTeacher"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tvSchoolAnnouncementDetailTeacher" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvSchoolAnnouncementDetailAttachment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cvSchoolAnnouncementDetailAnnouncement"
                android:layout_marginHorizontal="@dimen/size_8"
                android:layout_marginTop="@dimen/size_8"
                android:elevation="@dimen/size_2"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/size_16"
                    android:paddingBottom="@dimen/size_16">

                    <TextView
                        android:id="@+id/tvSchoolAnnouncementDetailAttachmentTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size_10"
                        android:text="Lampiran"
                        android:textSize="@dimen/text_12"
                        android:lineHeight="@dimen/text_20"
                        android:textColor="#222222"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/clSchoolAnnouncementDetailAttachmentLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_8"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/ivAnnouncementDetailAttachmentLink"
                            android:layout_width="@dimen/size_24"
                            android:layout_height="@dimen/size_24"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_marginLeft="@dimen/size_10"
                            android:src="@drawable/ic_link_red"/>

                        <TextView
                            android:id="@+id/tvAnnouncementDetailAttachmentLink"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="@+id/ivAnnouncementDetailAttachmentLink"
                            app:layout_constraintBottom_toBottomOf="@+id/ivAnnouncementDetailAttachmentLink"
                            app:layout_constraintLeft_toRightOf="@+id/ivAnnouncementDetailAttachmentLink"
                            android:layout_marginLeft="@dimen/size_12"
                            android:text="drive.google.com"
                            android:textColor="#212121"
                            android:textSize="@dimen/text_14"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/clSchoolAnnouncementDetailAttachmentPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_8"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/ivAnnouncementDetailAttachmentPhoto"
                            android:layout_width="@dimen/size_24"
                            android:layout_height="@dimen/size_24"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_marginLeft="@dimen/size_10"
                            android:src="@drawable/ic_photo_red"/>

                        <TextView
                            android:id="@+id/tvAnnouncementDetailAttachmentPhoto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="@+id/ivAnnouncementDetailAttachmentPhoto"
                            app:layout_constraintBottom_toBottomOf="@+id/ivAnnouncementDetailAttachmentPhoto"
                            app:layout_constraintLeft_toRightOf="@+id/ivAnnouncementDetailAttachmentPhoto"
                            android:layout_marginLeft="@dimen/size_12"
                            android:text="FieldTrip2020.jpg"
                            android:textColor="#212121"
                            android:textSize="@dimen/text_14"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/clSchoolAnnouncementDetailAttachmentFile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_8"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/ivAnnouncementDetailAttachmentFile"
                            android:layout_width="@dimen/size_24"
                            android:layout_height="@dimen/size_24"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_marginLeft="@dimen/size_10"
                            android:src="@drawable/ic_file_red"/>

                        <TextView
                            android:id="@+id/tvAnnouncementDetailAttachmentFile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="@+id/ivAnnouncementDetailAttachmentFile"
                            app:layout_constraintBottom_toBottomOf="@+id/ivAnnouncementDetailAttachmentFile"
                            app:layout_constraintLeft_toRightOf="@+id/ivAnnouncementDetailAttachmentFile"
                            android:layout_marginLeft="@dimen/size_12"
                            android:text="aturan-aturan FieldTrip.pdf"
                            android:textColor="#212121"
                            android:textSize="@dimen/text_14"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvSchoolAnnouncementDetailComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cvSchoolAnnouncementDetailAttachment"
                android:layout_marginHorizontal="@dimen/size_8"
                android:layout_marginTop="@dimen/size_8"
                android:layout_marginBottom="@dimen/size_8"
                android:elevation="@dimen/size_2"
                app:cardCornerRadius="4dp"
                android:descendantFocusability="blocksDescendants">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvSchoolAnnouncementDetailCommentTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size_10"
                        android:layout_marginTop="@dimen/size_16"
                        android:lineHeight="@dimen/text_20"
                        android:text="Komentar"
                        android:textColor="#222222"
                        android:textSize="@dimen/text_12" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvSchoolAnnouncementDetailComment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvSchoolAnnouncementDetailCommentTitle"
                        android:layout_marginTop="@dimen/size_8"
                        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <EditText
        android:id="@+id/etSchoolAnnouncementDetailComment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_52"
        android:layout_alignParentBottom="true"
        android:background="@drawable/edit_text_rectangle_white"
        android:drawableRight="@drawable/ic_send_red"
        android:gravity="center_vertical"
        android:hint="@string/insert_comment"
        android:padding="@dimen/size_16"
        android:shadowColor="@color/colorGray"
        android:textColor="@color/colorBlack"
        android:textCursorDrawable="@null" />

</RelativeLayout>

